Making local changes

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp. I say INTERESTING!!
+            I am finally making a few changes
+            I am BIJOY...
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
