[imad-console] Updates ui/article_1.html

--- a/ui/article_1.html
+++ b/ui/article_1.html
@@ -1,2 +1,40 @@
 <html>
+    <head>
+        <title>
+            First ever article
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href * "/">Home</a>
+        </div>
+        <div>
+            My first web article. Actually my first article.
+        </div>
+        <hr/>
+        <p>
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+        </p>
+        <p>
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+        </p>
+        <p>
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+        </p>
+        <p>
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+            This being my first experience making web applications, I am extremey excited!
+        </p>
+    </body>
 </html>
