[imad-console] Updates ui/article_1.html

--- a/ui/article_1.html
+++ b/ui/article_1.html
@@ -6,10 +6,16 @@
     </head>
     <body>
         <div>
-            <a href * "/">Home</a>
+            <a href='/'>Home</a>
         </div>
         <div>
+            <h3>
             My first web article. Actually my first article.
+            </h3>
+        </div>
+        <hr/>
+        <div>
+            Sep 29 2016
         </div>
         <hr/>
         <p>
@@ -36,5 +42,6 @@
             This being my first experience making web applications, I am extremey excited!
             This being my first experience making web applications, I am extremey excited!
         </p>
+        <hr/>
     </body>
 </html>
