[imad-console] Updates ui/article_3.html

--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -2,12 +2,12 @@
         </div>
         <div>
             <h3>
-            My 3rd web article. Actually my first article.
+            Article #3
             </h3>
         </div>
         <hr/>
         <div>
-            Sep 29 2016
+            Sep 29 2016, 9:22 PM
         </div>
         <hr/>
         <p>
