[imad-console] Updates ui/article_2.html

--- a/ui/article_2.html
+++ b/ui/article_2.html
@@ -2,12 +2,12 @@
         </div>
         <div>
             <h3>
-            My 2nd web article. Actually my first article.
+            2nd web article.
             </h3>
         </div>
         <hr/>
         <div>
-            Sep 29 2016
+            Sep 29 2016 , 9:12 PM
         </div>
         <hr/>
         <p>
