[imad-console] Updates ui/article_2.html

--- a/ui/article_2.html
+++ b/ui/article_2.html
@@ -1,13 +1,23 @@
+ <html>
+    <head>
+        <title>
+            Second article
+        </title>
+    </head>
+    <body>
+        <div>
             <a href='/'>Home</a>
+            <a href='/article_1.html'>Previous</a>
+            <a href='/article_3.html'>Next</a>
         </div>
         <div>
             <h3>
-            2nd web article.
+            Article #2
             </h3>
         </div>
         <hr/>
         <div>
-            Sep 29 2016 , 9:12 PM
+            Sep 29 2016
         </div>
         <hr/>
         <p>
