[imad-console] Updates ui/article_3.html

--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -1,4 +1,14 @@
+  <html>
+    <head>
+        <title>
+           Third article
+        </title>
+    </head>
+    <body>
+        <div>
             <a href='/'>Home</a>
+            <a href='/article_2.html'>Previous</a>
+            <a href='/article_3.html'>Next</a>
         </div>
         <div>
             <h3>
@@ -7,7 +17,7 @@
         </div>
         <hr/>
         <div>
-            Sep 29 2016, 9:22 PM
+            Sep 29 2016
         </div>
         <hr/>
         <p>
