--- a/ui/article_1.html
+++ b/ui/article_1.html
@@ -7,6 +7,7 @@
     <body>
         <div>
             <a href='/'>Home</a>
+            <a href='/article_3.html'>Previous</a>
             <a href='/article_2.html'>Next</a>
         </div>
         <div>
