[imad-console] Updates ui/article_1.html

--- a/ui/article_1.html
+++ b/ui/article_1.html
@@ -7,8 +7,8 @@
     <body>
         <div>
             <a href='/'>Home</a>
-            <a href='/article_3.html'>Previous</a>
-            <a href='/article_2.html'>Next</a>
+            <a href='/article_3'>Previous</a>
+            <a href='/article_2'>Next</a>
         </div>
         <div>
             <h3>
