--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -7,8 +7,8 @@
     <body>
         <div>
             <a href='/'>Home</a>
-            <a href='/article_2.html'>Previous</a>
-            <a href='/article_1.html'>Next</a>
+            <a href='/article_2'>Previous</a>
+            <a href='/article_1'>Next</a>
         </div>
         <div>
             <h3>
