[imad-console] Updates ui/article_3.html

--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -3,9 +3,31 @@
         <title>
            Third article
         </title>
+        <style>
+        
+        .links{
+            font-family : ariel;
+            colour : blue;
+            max-width : 100px;
+            margin : 0 auto;
+            padding-top : 25px;
+            padding-left : 25px;
+            padding-right : 25px;
+        }
+        
+        .body{
+            font-family: Agency FB
+            colour: grey;
+            max-width : 100px;
+            margin : 0 auto;
+            padding-top : 25px;
+            padding-left : 25px;
+            padding-right : 25px;
+        }
+        </style>
     </head>
     <body>
-        <div>
+        <div class = 'links'>
             <a href='/'>Home</a>
             <a href='/article_2'>Previous</a>
             <a href='/article_1'>Next</a>
@@ -20,30 +42,32 @@
             Sep 29 2016
         </div>
         <hr/>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
+        <div class = 'body'>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+        </div>
         <hr/>
     </body>
 </html>
