[imad-console] Updates ui/article_3.html

--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -7,7 +7,7 @@
         
         .links{
             font-family : ariel;
-            colour : blue;
+            color : yellow;
             max-width : 100px;
             margin : 0 auto;
             padding-top : 25px;
@@ -16,8 +16,8 @@
         }
         
         .body{
-            font-family: Agency FB
-            colour: grey;
+            font-family: Agency FB;
+            color: grey;
             max-width : 100px;
             margin : 0 auto;
             padding-top : 25px;
