--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -6,23 +6,24 @@
         <style>
         
         .links{
-            font-family : ariel;
-            color : yellow;
-            max-width : 100px;
-            margin : 0 auto;
-            padding-top : 25px;
-            padding-left : 25px;
-            padding-right : 25px;
+            font-family: ariel;
+            color: #fbfb14;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-top: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
+
         }
         
         .body{
             font-family: Agency FB;
-            color: grey;
-            max-width : 100px;
-            margin : 0 auto;
-            padding-top : 25px;
-            padding-left : 25px;
-            padding-right : 25px;
+            color: #322250;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-top: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
         }
         </style>
     </head>
