--- a/ui/article_1.html
+++ b/ui/article_1.html
@@ -3,9 +3,32 @@
         <title>
             First ever article
         </title>
+         <style>
+        
+        .links{
+            font-family: ariel;
+            color: #fbfb14;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-top: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
+
+        }
+        
+        .body{
+            font-family: Agency FB;
+            color: #322250;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-top: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
+        }
+        </style>
     </head>
     <body>
-        <div>
+        <div class ='links'>
             <a href='/'>Home</a>
             <a href='/article_3'>Previous</a>
             <a href='/article_2'>Next</a>
@@ -20,30 +43,32 @@
             Sep 29 2016
         </div>
         <hr/>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
+        <div class = 'body'>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+            <p>
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+                This being my first experience making web applications, I am extremey excited!
+            </p>
+        </div>
         <hr/>
     </body>
 </html>
