[imad-console] Updates ui/article_2.html

--- a/ui/article_2.html
+++ b/ui/article_2.html
@@ -3,9 +3,32 @@
         <title>
             Second article
         </title>
+        <style>
+        
+        .links{
+            font-family: ariel;
+            color: #fbfb14;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-top: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
+
+        }
+        
+        .body{
+            font-family: Agency FB;
+            color: #322250;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-top: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
+        }
+        </style>
     </head>
     <body>
-        <div>
+        <div class = 'links'>
             <a href='/'>Home</a>
             <a href='/article_1'>Previous</a>
             <a href='/article_3'>Next</a>
@@ -19,31 +42,13 @@
         <div>
             Sep 29 2016
         </div>
-        <hr/>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <p>
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-            This being my first experience making web applications, I am extremey excited!
-        </p>
-        <hr/>
+        <div class = 'body'>
+            <hr/>
+            <p>
+                Learned to change fonts and other styles.
+                We are still learning.
+            </p>
+            <hr/>
+        </div>
     </body>
 </html>
