[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp. I say INTERESTING!!
-            I am finally making a few changes
-            I am BIJOY...
+            Hi. I am Bijoy. This is my first web app.
+        </div>
+        <div class = "links">
+            <a href = "/article_1">Artilces</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
