[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi. I am Bijoy. This is my first web app.
         </div>
         <div class = "links">
-            <a href = "/article_1">Artilces</a>
+            <a href = "/article_1">Articles</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
