--- a/ui/article_1.html
+++ b/ui/article_1.html
@@ -3,6 +3,8 @@
         <title>
             First ever article
         </title>
+        <meta name = "viewport" content = "width-device-width, initial-scale-1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class ='links'>
@@ -20,7 +22,7 @@
             Sep 29 2016
         </div>
         <hr/>
-        <div class = 'body'>
+        <div class = 'body1'>
             <p>
                 This being my first experience making web applications, I am extremey excited!
                 This being my first experience making web applications, I am extremey excited!
