--- a/ui/article_2.html
+++ b/ui/article_2.html
@@ -3,6 +3,8 @@
         <title>
             Second article
         </title>
+        <meta name = "viewport" content = "width-device-width, initial-scale-1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class = 'links'>
@@ -19,7 +21,7 @@
         <div>
             Sep 29 2016
         </div>
-        <div class = 'body'>
+        <div class = 'body1'>
             <hr/>
             <p>
                 Learned to change fonts and other styles.
