--- a/ui/article_3.html
+++ b/ui/article_3.html
@@ -3,29 +3,8 @@
         <title>
            Third article
         </title>
-        <style>
-        
-        .links{
-            font-family: ariel;
-            color: #fbfb14;
-            max-width: 800px;
-            margin: 0 auto;
-            padding-top: 25px;
-            padding-left: 25px;
-            padding-right: 25px;
-
-        }
-        
-        .body{
-            font-family: Agency FB;
-            color: #322250;
-            max-width: 800px;
-            margin: 0 auto;
-            padding-top: 25px;
-            padding-left: 25px;
-            padding-right: 25px;
-        }
-        </style>
+        <meta name = "viewport" content = "width-device-width, initial-scale-1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class = 'links'>
@@ -43,7 +22,7 @@
             Sep 29 2016
         </div>
         <hr/>
-        <div class = 'body'>
+        <div class = 'body1'>
             <p>
                 This being my first experience making web applications, I am extremey excited!
                 This being my first experience making web applications, I am extremey excited!
