--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
         <div class = "links">
             <a href = "/article_1">Articles</a>
         </div>
+        <script>
+            alert('Hi, I am trying out inline javascript!! ');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
