[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,5 +19,8 @@
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        <script>
+            alert('The text has changed!');
+        </script>
     </body>
 </html>
