--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,14 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id = 'madi' class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold" id = 'text1'>
-            Hi. I am Bijoy. This is my first web app.
+        <div class = "profile">
+            <div id = 'madi' class="center">
+                <img src="http://3.bp.blogspot.com/_uEDK3bFfmrU/SeTvyjvqhXI/AAAAAAAAB2s/fMv04KYNK5U/s400/09---BIJOY-AMBIGRAM.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold" id = 'text1'>
+                Hi. I am Bijoy. This is my first web app.
+            </div>
         </div>
         <div class = "links">
             <a href = "/article_1">Articles</a>
