[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,18 @@
                 <img src="http://3.bp.blogspot.com/_uEDK3bFfmrU/SeTvyjvqhXI/AAAAAAAAB2s/fMv04KYNK5U/s400/09---BIJOY-AMBIGRAM.jpg" class="img-medium"/>
             </div>
             <br>
-            <div class="center text-big bold" id = 'text1'>
-                Hi. I am Bijoy. This is my first web app.
+            <div class = "text">
+                <h3>
+                    Personal
+                </h3>
+                <hr/>
+                    Hi. My name is Bijoy J Raj.
+                <h3>
+                    Professional
+                </h3>
+                    I am a 3rd year engineering student at \n
+                    the Federal Isntitute of Science and Technology.
+                <hr/>
             </div>
         </div>
         <div class = "links">
