--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class = "profile">
+        <div class = "profile body1">
             <div id = 'madi' class="center">
                 <img src="http://3.bp.blogspot.com/_uEDK3bFfmrU/SeTvyjvqhXI/AAAAAAAAB2s/fMv04KYNK5U/s400/09---BIJOY-AMBIGRAM.jpg" class="img-medium"/>
             </div>
