[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
                 <h3>
                     Professional
                 </h3>
-                    I am a 3rd year engineering student at \n
+                    I am a 3rd year engineering student at 
                     the Federal Isntitute of Science and Technology.
                 <hr/>
             </div>
