--- a/ui/index.html
+++ b/ui/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class = "links">
             <a href = "/article_1">Articles</a>
+            <button href = "/counter">Counter</button>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
