[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,9 +23,9 @@
                 <hr/>
             </div>
         </div>
-        <div class = "links">
+        <div class = "links footer">
             <a href = "/article_1">Articles</a>
-            <button onclick = "href = /counter">Counter</button>
+            <button id = "counter">Counter</button> = <span id = "count">0</span>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
