[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
         <div class = "links footer">
             <a href = "/article_1">Articles</a>
             <br>
-            <button id = "counter">Counter</button> = <span id = "count">0</span>
+            The value of <button id = "counter">Counter</button> is = <span id = "count">0</span>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
