[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
                     Professional
                 </h3>
                     I am a 3rd year engineering student at 
-                    the Federal Isntitute of Science and Technology.
+                    the Federal Institute of Science and Technology (FISAT).
                 <hr/>
             </div>
         </div>
