[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,6 +28,15 @@
             <br>
             The value of <button id = "counter">Counter</button> is = <span id = "count">0</span>
         </div>
+        <hr/>
+        <input type = "text" id = "name" placeholder = "name"></input>
+        <input type = "submit" value = "SUBMIT"></input>
+        <ul>
+            <l1>name1</l1>
+            <l1>name2</l1>
+            <l1>name3</l1>
+        </ul>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
