--- a/ui/index.html
+++ b/ui/index.html
@@ -32,9 +32,9 @@
         <input type = "text" id = "name" placeholder = "name"></input>
         <input type = "submit" value = "SUBMIT"></input>
         <ul>
-            <l1>name1</l1>
-            <l1>name2</l1>
-            <l1>name3</l1>
+            <li>name1</li>
+            <li>name2</li>
+            <li>name3</li>
         </ul>
         
         <script type="text/javascript" src="/ui/main.js">
