--- a/ui/index.html
+++ b/ui/index.html
@@ -28,8 +28,8 @@
             <br><br><br>
             The value of <button id = "counter">Counter</button> is = <span id = "count">0</span>
             <hr/>
-            <input type = "text" id = "name" placeholder = "name"></input>
-            <input type = "submit" value = "SUBMIT"></input>
+            <input type = "text" id = "name" placeholder = "name">
+            <input type = "submit" value = "SUBMIT">
             <ul>
                 <li>name1</li>
                 <li>name2</li>
