[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,12 +28,9 @@
             <br><br><br>
             The value of <button id = "counter">Counter</button> is = <span id = "count">0</span>
             <hr/>
-            <input type = "text" id = "name" placeholder = "name">
-            <input type = "submit" value = "SUBMIT">
-            <ul>
-                <li>name1</li>
-                <li>name2</li>
-                <li>name3</li>
+            <input type = "text" id = "namein" placeholder = "name">
+            <input type = "submit" value = "SUBMIT" id = "submit_btn">
+            <ul id = "names">
             </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
